# algorithms-visualization

./: .gitignore  CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: BubbleSort.h  MergeSort.h  QuickSort.h  SortingAlgorithm.h
src/: SortingAlgorithm.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
